tests/fail/type_alias.py
temperature = int

a: temperature = True
